# codeql-solidity

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build.yml
extractor/: Cargo.toml
extractor/src/codegen/: mod.rs
extractor/src/extraction/: constfold.rs  extractor.rs  mod.rs
extractor/src/schema/: mod.rs
ql/lib/codeql/solidity/ast/: Constants.qll  Function.qll
ql/lib/codeql/solidity/dataflow/: TaintTracking.qll
queries/analysis/: AssertInProductionCode.ql  CalleeKinds.ql  FloatingPragma.ql  HighLayoutWithInheritance.ql  RequireWithoutReason.ql
queries/custom/: AssertInProductionCode.ql  FloatingPragma.ql  RequireWithoutReason.ql
sourcify/: download_parquet.py  download_parquet.sh  extract_compilation.py
